--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ActiveBox",
+  "name": "Designer Portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -7,7 +7,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://vanyusha-pupkin.github.io/ActiveBox/"
+    "url": "https://vanyusha-pupkin.github.io/designer-portfolio/"
   },
   "scripts": {
     "start": "gulp watchFiles --dev",
